perbaikan pada fungsi auto version file, menambak control donasi admin, perbaikan pada signup, menambah beberapa fungsi, menambahkan fitur cek detil donasi, fetch pada pagination dan search, menambah fungsi regex pada unlock profil (Hasil selama bulan ramadhan dan setelah ramadhan) 57 file termodif dan baru ditambahkan

--- a/app/views/admin/bantuan/berjalan.html
+++ b/app/views/admin/bantuan/berjalan.html
@@ -23,7 +23,8 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <?php if (!is_null($data['data_bantuan_kategori'])) {
+                        <?php 
+                        if (!is_null($data['data_bantuan_kategori'])) {
                             foreach($data['data_bantuan_kategori'] as $data_bantuan) { ?>
                         <tr>
                             <th scope="row">
