--- a/public/assets/route/admin/core/css/admin-style.css
+++ b/public/assets/route/admin/core/css/admin-style.css
@@ -4,7 +4,14 @@
 }
 
 table tfoot th {
+    font-size: .65rem !important;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    letter-spacing: 1px;
     text-transform: uppercase;
+    border-top: 1px solid #e9ecef !important;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
 }
 
 table tbody>tr>td,
@@ -15,6 +22,32 @@ table tbody>tr>th {
 table tbody>tr.highlight {
     --highlight: var(--lighter);
     animation: pulse 1s linear 3;
+}
+
+table td .progress-info > div > span {
+    font-size: 0.65rem !important;
+}
+
+/* table th.auto, td.auto */
+table th.auto,
+table td.auto {
+    width: 0;
+}
+
+/* table th.fit, td.fit */
+.table td.fit, 
+.table th.fit {
+    white-space: nowrap;
+    width: 1%;
+}
+
+/* badge */
+.badge {
+    letter-spacing: 1px;
+}
+
+.small {
+    letter-spacing: 0.5px;
 }
 
 @keyframes pulse {
@@ -97,6 +130,11 @@ a.disabled {
 .select2-container--default .select2-selection--multiple,
 .select2-container--default.select2-container--focus .select2-selection--multiple {
     box-shadow: 0 0 0 0.2rem rgb(94 114 228 / 25%);
+}
+
+/* Pagination */
+.pagination .page-item:last-child .page-link {
+    margin-right: 0px !important;
 }
 
 @media (min-width: 360px) {
