--- a/app/views/admin/profile/index.html
+++ b/app/views/admin/profile/index.html
@@ -47,7 +47,7 @@
                                 <a class="dropdown-item" data-target="#kelola-password" data-toggle="collapse" href="#kelola-password">Ganti
                                     Password</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Ganti Foto</a>
+                                <!-- <a class="dropdown-item" href="#">Ganti Foto</a> -->
                             </div>
                         </div>
                     </div>
@@ -99,14 +99,14 @@
                             <div class="form-group">
                                 <label class="form-control-label" for="input-username">Username</label>
                                 <input type="text" readonly id="input-username" class="form-control"
-                                    placeholder="Username" value="<?= $data['akun']->username ?>">
+                                    placeholder="Username" value="<?= $data['akun']->username; ?>">
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="form-group">
                                 <label class="form-control-label" for="input-email">Alamat Email</label>
                                 <input type="email" readonly id="input-email" class="form-control"
-                                    placeholder="<?= $data['akun']->email ?>">
+                                    placeholder="<?= $data['akun']->email; ?>">
                             </div>
                         </div>
                     </div>
@@ -115,7 +115,7 @@
                             <div class="form-group">
                                 <label class="form-control-label" for="input-name">Nama Pegawai</label>
                                 <input type="text" readonly id="input-name" class="form-control"
-                                    placeholder="Nama Lengkap" value="<?= $data['pegawai']->nama ?>">
+                                    placeholder="Nama Lengkap" value="<?= ucwords(strtolower($data['pegawai']->nama)); ?>">
                             </div>
                         </div>
                     </div>
